--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+* {
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container-inner {
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 1300px;
+  padding: 10px 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  margin-left: 15%;
+  margin-right: 15% ;
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.authorization {
+  margin-top: 2.5%;
+}
+
+.authorization span {
+  margin-left: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  user-select: none;
+  font-weight: 600;
 }
