--- a/front/src/components/Main/Main.css
+++ b/front/src/components/Main/Main.css
@@ -6,7 +6,7 @@
 }
 
 .main-header h2 {
-    margin: 0px;
+    margin: 0;
 }
 
 .main-header button {
@@ -17,4 +17,18 @@
     border: 2px solid black;
     cursor: pointer;
     font-size: 16px;
+}
+
+.newEvent {
+    color: blue;
+    text-decoration: underline;
+    font-size: 18px;
+    cursor: pointer;
+    user-select: none;
+    margin-top: 5px;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
 }
